tests/valid/test03_operaciones_anidadas.ml
// Test 03: Operaciones anidadas con precedencia
a = 2 + 3 * 4;
b = (2 + 3) * 4;
print(a);
print(b);
